Tip Calculator - Made all calculations do rounding, fixed percent rounding errors, made top part display as inline-block so labels and inputs wrap together, sundry other code improvements.

--- a/tip_calculator/styles_unminified.css
+++ b/tip_calculator/styles_unminified.css
@@ -14,7 +14,7 @@ body {
 }
 
 h3 {
-  font-size: 1.3rem;
+  fonst-size: 1.3rem;
   padding: 0.4rem;
   margin: 0px;
   background-color: #003FD1;
